--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <p>Buy Solana</p>
         <p>Features</p>
     </div>
-    <div>
+    <div class="about-spacio">
         <h3>About spacio</h3> <br>
         <p>About Us</p>
         <p>Fees</p>
